Fix travis command

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ services:
 before_scripts: pip install docker-compose
 
 script:
-  - docker-compose run app sh -c "python manage.py test && flakes8"
+  - docker-compose run app sh -c "python manage.py test && flake8"
